[project]
name = "it-sec-u2"
version = "0.1.0"
description = "IT Security Übung 2 - Aufgabe 1: Affines Symmetrisches Verschlüsselungsverfahren"
authors = [
    { name = "Bent Hillerkus", email = "29630575+benthillerkus@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
caesar = "python3 src/caesar/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/caesar"]
